adding some basic style

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -24,7 +24,7 @@ h2 {
   background-color: #340458;
 }
 
-.video-container video {}
+/* .video-container video {} */
 
 .control-bar {
   width: 100%;
