--- a/views/audio.hbs
+++ b/views/audio.hbs
@@ -1,4 +1,4 @@
-<section aria-label="Video player">
+{{!-- <section aria-label="Video player">
     <h2 class="div1">Dr. Binocs</h2>
     <div class="parent">
         <div class="video-container div2">
@@ -71,4 +71,4 @@
             </ul>
         </div>
     </div>
-</section>
+</section> --}}
