--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,13 +3,6 @@ body {
   background-color: #f6f3fa;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%2334116c' fill-opacity='0.09'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"); }
 
-h2 {
-  font-family: 'Nunito Sans', sans-serif;
-  font-size: 2.5em;
-  font-weight: 900;
-  letter-spacing: 0.12em;
-  color: #340458; }
-
 /* #340458 #fed636 #14cac9*/
 .video-container {
   display: flex;
@@ -20,9 +13,48 @@ h2 {
   padding-bottom: 56.25%;
   background-color: #340458; }
 
-.control-bar {
-  width: 100%;
+.styleContainer {
   background-color: #340458;
+  padding: 30px 30px 150px 30px;
+  border-radius: 10px; }
+  .styleContainer h1 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 2.5em;
+    font-weight: 900;
+    letter-spacing: 0.12em;
+    color: #f6f3fa; }
+  .styleContainer h2 {
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 2.5em;
+    font-weight: 900;
+    letter-spacing: 0.12em;
+    color: #fed636; }
+  .styleContainer h3 {
+    padding-left: 25px;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 2.5em;
+    font-weight: 900;
+    letter-spacing: 0.12em;
+    color: #340458; }
+  .styleContainer .transcript-container {
+    background-color: #f6f3fa;
+    border-radius: 10px;
+    padding-left: 10px; }
+    .styleContainer .transcript-container span {
+      font-family: 'Nunito Sans', sans-serif;
+      font-size: 1.0em; }
+    .styleContainer .transcript-container li {
+      font-family: 'Nunito Sans', sans-serif;
+      font-size: 1.3em;
+      color: #444;
+      letter-spacing: 0.12em;
+      line-height: 1.75em; }
+  .styleContainer video {
+    border-radius: 10px; }
+
+.control-bar {
+  width: 99%;
+  background-color: #f6f3fa;
   padding: 0.5rem;
   display: flex;
   justify-content: space-between;
@@ -64,7 +96,7 @@ h2 {
 .transcript-container {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 700px;
   overflow: auto; }
 
 .transcript-list {
@@ -74,8 +106,9 @@ h2 {
 
 .timestamp {
   font-size: 1.3em;
-  background-color: #340458;
-  color: #fed636;
+  background-color: #14cac9;
+  color: #340458;
+  font-weight: bold;
   padding: 5px;
   border-radius: 10px;
   margin-right: 10px; }
@@ -95,3 +128,8 @@ li {
 
 .div3 {
   grid-area: 1 / 3 / 3 / 4; }
+
+.transcript-list .active {
+  background-color: #fff;
+  color: #000;
+  font-weight: bold; }
