--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <h1>{{title}}</h1>
+    <a class="skip-link" href="#playButton">Skip to play</a>
     <nav>
         <a href="/">Video</a>
         <a href="/audio">Audio</a>
