--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,6 +13,9 @@ body {
   padding-bottom: 56.25%;
   background-color: #340458; }
 
+#seekbar {
+  width: 100%; }
+
 .styleContainer {
   background-color: #340458;
   padding: 30px 30px 150px 30px;
@@ -20,20 +23,17 @@ body {
   .styleContainer h1 {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 2.5em;
-    font-weight: 900;
     letter-spacing: 0.12em;
     color: #f6f3fa; }
   .styleContainer h2 {
     font-family: 'Nunito Sans', sans-serif;
     font-size: 2.5em;
-    font-weight: 900;
     letter-spacing: 0.12em;
     color: #fed636; }
   .styleContainer h3 {
     padding-left: 25px;
     font-family: 'Nunito Sans', sans-serif;
     font-size: 2.5em;
-    font-weight: 900;
     letter-spacing: 0.12em;
     color: #340458; }
   .styleContainer .transcript-container {
@@ -46,7 +46,7 @@ body {
     .styleContainer .transcript-container li {
       font-family: 'Nunito Sans', sans-serif;
       font-size: 1.3em;
-      color: #444;
+      color: #000;
       letter-spacing: 0.12em;
       line-height: 1.75em; }
   .styleContainer video {
@@ -58,7 +58,8 @@ body {
   padding: 0.5rem;
   display: flex;
   justify-content: space-between;
-  align-items: center; }
+  align-items: center;
+  border-radius: 10px; }
 
 .control-bar button {
   margin-right: 0.5rem; }
@@ -72,7 +73,8 @@ body {
   margin-right: 0.2rem; }
 
 .btn i {
-  font-size: 2rem; }
+  font-size: 2rem;
+  padding: 10px; }
 
 .btn-primary {
   background-color: #14cac9;
@@ -99,7 +101,7 @@ body {
   height: 700px;
   overflow: auto; }
 
-.transcript-list {
+#transcript-list {
   list-style: none;
   padding: 0;
   list-style-type: none; }
@@ -108,13 +110,13 @@ body {
   font-size: 1.3em;
   background-color: #14cac9;
   color: #340458;
-  font-weight: bold;
   padding: 5px;
   border-radius: 10px;
   margin-right: 10px; }
 
 li {
-  margin: 20px; }
+  padding: 10px;
+  border-radius: 10px; }
 
 .parent {
   display: grid;
@@ -129,7 +131,36 @@ li {
 .div3 {
   grid-area: 1 / 3 / 3 / 4; }
 
-.transcript-list .active {
-  background-color: #fff;
+.transcript-list .current {
+  background-color: #fed636;
   color: #000;
-  font-weight: bold; }
+  scroll-margin-top: 10px; }
+
+a {
+  padding: 15px;
+  text-decoration: underline;
+  background-color: #340458;
+  color: #14cac9;
+  font-size: 2.0em;
+  font-family: 'Nunito Sans', sans-serif;
+  -webkit-border-top-left-radius: 10px;
+  -webkit-border-top-right-radius: 10px;
+  -moz-border-radius-topleft: 10px;
+  -moz-border-radius-topright: 10px;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px; }
+  a:hover {
+    color: #fed636; }
+  a:active {
+    color: #fed636; }
+
+.skip-link {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background-color: #340458;
+  padding: 10px;
+  z-index: 100; }
+
+.skip-link:focus {
+  top: 0; }
