--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -16,6 +16,12 @@ body {
     height: 0;
     padding-bottom: 56.25%;
     background-color: #340458;
+
+
+}
+
+#seekbar {
+    width: 100%;
 }
 
 // .video-container video {}
@@ -28,7 +34,6 @@ body {
     h1 {
         font-family: 'Nunito Sans', sans-serif;
         font-size: 2.5em;
-        font-weight: 900;
         letter-spacing: 0.12em;
         color: #f6f3fa;
     }
@@ -36,7 +41,6 @@ body {
     h2 {
         font-family: 'Nunito Sans', sans-serif;
         font-size: 2.5em;
-        font-weight: 900;
         letter-spacing: 0.12em;
         color: #fed636;
     }
@@ -46,7 +50,6 @@ body {
         padding-left: 25px;
         font-family: 'Nunito Sans', sans-serif;
         font-size: 2.5em;
-        font-weight: 900;
         letter-spacing: 0.12em;
         color: #340458;
     }
@@ -66,7 +69,7 @@ body {
         li {
             font-family: 'Nunito Sans', sans-serif;
             font-size: 1.3em;
-            color: #444;
+            color: #000;
             letter-spacing: 0.12em;
             line-height: 1.75em;
         }
@@ -84,6 +87,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    border-radius: 10px;
 }
 
 .control-bar button {
@@ -102,6 +106,7 @@ body {
 
 .btn i {
     font-size: 2rem;
+    padding: 10px;
 }
 
 .btn-primary {
@@ -135,7 +140,7 @@ body {
     overflow: auto;
 }
 
-.transcript-list {
+#transcript-list {
     list-style: none;
     padding: 0;
     list-style-type: none;
@@ -145,14 +150,14 @@ body {
     font-size: 1.3em;
     background-color: #14cac9;
     color: #340458;
-    font-weight: bold;
     padding: 5px;
     border-radius: 10px;
     margin-right: 10px;
 }
 
 li {
-    margin: 20px;
+    padding: 10px;
+    border-radius: 10px;
 }
 
 .parent {
@@ -172,18 +177,44 @@ li {
     grid-area: 1 / 3 / 3 / 4;
 }
 
-.transcript-list .active {
-    background-color: #fff;
+.transcript-list .current {
+    background-color: #fed636;
     color: #000;
-    font-weight: bold;
+    scroll-margin-top: 10px;
 }
 
+a {
+    padding: 15px;
+    text-decoration: underline;
+    background-color: #340458;
+    color: #14cac9;
+    font-size: 2.0em;
+    font-family: 'Nunito Sans', sans-serif;
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-topleft: 10px;
+    -moz-border-radius-topright: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
 
-nav {
-    color: #340458;
-
-    a {
-        text-decoration: none;
+    &:hover {
+        color: #fed636;
     }
 
+    &:active {
+        color: #fed636;
+    }
+}
+
+.skip-link {
+    position: absolute;
+    top: -40px;
+    left: 0;
+    background-color: #340458;
+    padding: 10px;
+    z-index: 100;
+}
+
+.skip-link:focus {
+    top: 0;
 }
